# terraform-ci

./: .dockerignore  .enc.env  .gitattributes  .gitignore  .prettierrc  .sops.yaml  .terraform-ci.yaml  CODEOWNERS  Dockerfile  README.md  docker-compose.yaml  lock.json  pyproject.toml  trivy.yaml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: apply.yaml  auto-approve-preview.yaml  comment-status.yaml  comment.yaml  create-badges.yaml  help.yaml  lock.yaml  merge-unlock.yaml  modules.yaml  plan.yaml  preview.yaml  production.yaml  publish-docker-image.yaml  rewrite-sarif-uris.sh  shared-auto-approve.yaml  shared-merge-unlock.yaml  shared-publish-tf-modules.yml  shared-terraform-apply.yaml  shared-terraform-plan.yaml  shared-trivy-config.yaml  sops.yaml  terraform-apply.yaml  terraform-plan.yaml  upload-badge.yaml
badges/: package-lock.json
coverage/: .envsample  pyproject.toml  sailpoint_coverage.py
modules/airport-distros/: README.md  main.tf  outputs.tf  variables.tf
policy/: group_name_standard.rego
preview/: .terraform.lock.hcl  README.md  docker-compose.yaml  groups.tf  main.tf  terraform.enc.tfvars.json  users.import.tf  users.tf  variables.tf
preview/service-accounts/: users.tf
production/: .terraform.lock.hcl  airports.tf  docker-compose.yaml  groups.tf  main.tf  terraform.enc.tfvars.json
scripts/: README.md  __init__.py  importer.py  tfstate_graph_parser.py
scripts/OktaTFImport/: _utils.py
scripts/tfstate-visualizer/: app.js  graph-data.js  index.html  styles.css
src/: import.py  pyproject.toml  terraform.py  test.py
(+46 files in other folders)
