[project]
name = "terraform-ci"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "okta>=2.9.5",
    "sailpoint>=1.3.4",
]

[project.scripts]
okta-import = "scripts.importer:cli_entry"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["scripts*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
